# book_bakend

./: .gitignore  README.md  SCENARIOS.md  db.sqlite3  pyproject.toml  pytest.ini
accounts/: serializers.py  urls.py  views.py
accounts/tests/: test_serializers.py
audio/: admin.py  models.py  serializers.py  urls.py  views.py
audio/migrations/: 0001_initial.py  0002_reciter_tenant_alter_chapteraudio_unique_together_and_more.py
audio/tests/: factories.py  test_models.py  test_serializers.py
book_backend/: __init__.py  settings.py  urls.py
books/: admin.py  models.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_book_tenant_alter_book_unique_together.py
books/tests/: factories.py  test_models.py  test_serializers.py
core/: admin.py  middleware.py  models.py
core/management/commands/: create_tenant.py
core/migrations/: 0001_initial.py
core/tests/: factories.py  test_middleware.py  test_models.py
notes/: admin.py  models.py  serializers.py  urls.py  views.py
notes/migrations/: 0001_initial.py  0002_initial.py
notes/tests/: factories.py  test_models.py  test_serializers.py
quran_backend/: settings.py  urls.py
users/: admin.py  models.py  serializers.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_tenant_and_more.py
users/tests/: factories.py  test_models.py  test_serializers.py
